--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -31,7 +31,7 @@ steps:
     ]
 
 substitutions:
-  _REGION: us-west1
+  _REGION: asia-northeast1
   _REPOSITORY: mmf-repository
   _IMAGE: mmf-back
   _TAG: latest
